feat(对讲): 添加通道对讲接口及相关逻辑
